--- a/package.json
+++ b/package.json
@@ -15,12 +15,20 @@
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.0.2",
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
+        "popper.js": "^1.12",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
         "tailwindcss": "^2.0.1",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "node-sass": "^4.14.1"
     }
 }
